--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -204,6 +204,7 @@
   "Invalid email": "بريد الكتروني غير صالح",
   "Invalid file format! Custom theme file must be in JSON": "تنسيق ملف غير صالح! يجب أن يكون ملف المظهر المخصص بتنسيق JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "يوصى بشدة بتشفيرمحفظتك للحفاظ على رصيدك NXS.",
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "الحفاظ على تحديث تلقائي",
   "Keep policy on": "الحفاظ على السياسة",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "الحفاظ على تحديث محفظتك مهم بالنسبة لأمنك وستضمن حصولك على أفضل تجربة مستخدم ممكنة.",
@@ -257,6 +258,7 @@
   "My Addresses": "عناويني",
   "My Nexus address": "عنواني Nexus",
   "My Nexus address for %{name}": "عنواني Nexus ل%{name}",
+  "My address for %{name}": null,
   "NXS Amount": "مبلغ NXS",
   "NXS addresses": "عناوين NXS",
   "NXS moved successfully": "تم نقل NXS بنجاح",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "هذا عنوان مسجل لهذه المحفظة.",
   "This is not one of your addresses.": "هذا العنوان ليس جزءا من عناوينك.",
   "This is one of your addresses.": "هذا واحد من عناوينك.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "هذا عنوانك الافتراضي",
   "This module is developed by Nexus": "تم تطوير هذه الوحدة من قبل الفريق Nexus",
   "This repository does not exist or is private": "هذا الدليل غير موجود او خاص",
@@ -461,6 +464,7 @@
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": "سيتم تحديث المحفظة تلقائيًا ليصبح التغيير نافذ المفعول",
   "Warning": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "نعم",
   "Yes, abort": "نعم، أحبط",
   "Yes, let's bootstrap it": "نعم، قم بتمهيدها",
