--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -204,6 +204,7 @@
   "Invalid email": null,
   "Invalid file format! Custom theme file must be in JSON": "Ungültiges Dateiformat! Das benutzerdefinierte Design muss im JSON Format vorliegen",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Automatisches Update aktiviert lassen",
   "Keep policy on": null,
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Aus Sicherheitsgründen ist es wichtig immer die aktuellste Version der Wallet zu verwenden.",
@@ -257,6 +258,7 @@
   "My Addresses": "Meine Adressen",
   "My Nexus address": "Meine Nexus-Adresse",
   "My Nexus address for %{name}": "Meine Nexus-Adresse für %{name}",
+  "My address for %{name}": null,
   "NXS Amount": "NXS Betrag",
   "NXS addresses": "NXS-Adressen",
   "NXS moved successfully": "NXS erfolgreich überwiesen",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Diese Adresse ist in dieser Wallet registriert.",
   "This is not one of your addresses.": "Dies ist keine Ihrer Adressen.",
   "This is one of your addresses.": "Dies ist eine Ihrer Adressen.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "Dies ist Ihre Standard-Adresse",
   "This module is developed by Nexus": "Dieses Modul wird von Nexus entwickelt",
   "This repository does not exist or is private": "Dieses Repository existiert nicht oder ist privat",
@@ -461,6 +464,7 @@
   "Wallet password": "Wallet-Passwort",
   "Wallet will be automatically refreshed for the change to take effect": "Wallet wird automatisch aktualisiert, damit die Änderung wirksam wird",
   "Warning": "Warnung",
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Ja",
   "Yes, abort": "Ja, Abbruch",
   "Yes, let's bootstrap it": "Ja, lass es bootstrapen",
