--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -204,6 +204,7 @@
   "Invalid email": "Invalid email",
   "Invalid file format! Custom theme file must be in JSON": "Invalid file format! Custom theme file must be in JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "It is highly recommended that you should encrypt your wallet to keep your NXS safe.",
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.",
   "Keep auto update On": "Keep auto update On",
   "Keep policy on": "Keep policy on",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.",
@@ -257,6 +258,7 @@
   "My Addresses": "My Addresses",
   "My Nexus address": "My Nexus address",
   "My Nexus address for %{name}": "My Nexus address for %{name}",
+  "My address for %{name}": "My address for %{name}",
   "NXS Amount": "NXS Amount",
   "NXS addresses": "NXS addresses",
   "NXS moved successfully": "NXS moved successfully",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "This is an address registered to this wallet.",
   "This is not one of your addresses.": "This is not one of your addresses.",
   "This is one of your addresses.": "This is one of your addresses.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!",
   "This is your Default Address": "This is your Default Address",
   "This module is developed by Nexus": "This module is developed by Nexus",
   "This repository does not exist or is private": "This repository does not exist or is private",
@@ -461,6 +464,7 @@
   "Wallet password": "Wallet password",
   "Wallet will be automatically refreshed for the change to take effect": "Wallet will be automatically refreshed for the change to take effect",
   "Warning": "Warning",
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.",
   "Yes": "Yes",
   "Yes, abort": "Yes, abort",
   "Yes, let's bootstrap it": "Yes, let's bootstrap it",
