--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -204,6 +204,7 @@
   "Invalid email": "Correo electrónico no válido",
   "Invalid file format! Custom theme file must be in JSON": "Formato de archivo no válido. El archivo de tema personalizado debe estar en JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Mantener la actualización automática activada",
   "Keep policy on": null,
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Mantener su billetera actualizada es importante para su seguridad y garantizará que obtenga la mejor experiencia de usuario posible.",
@@ -257,6 +258,7 @@
   "My Addresses": "Mis direcciones",
   "My Nexus address": "Mi dirección Nexus",
   "My Nexus address for %{name}": "Mi dirección Nexus para %{name}",
+  "My address for %{name}": null,
   "NXS Amount": null,
   "NXS addresses": "Direcciones NXS",
   "NXS moved successfully": "NXS se movió correctamente",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Esta es una dirección registrada en esta billetera.",
   "This is not one of your addresses.": "Esta no es una de sus direcciones.",
   "This is one of your addresses.": "Esta es una de sus direcciones.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": null,
   "This module is developed by Nexus": null,
   "This repository does not exist or is private": null,
@@ -461,6 +464,7 @@
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Sí",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
