--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -204,6 +204,7 @@
   "Invalid email": "Sähköpostiosoite on virheellinen",
   "Invalid file format! Custom theme file must be in JSON": "Väärä tiedostotyyppi! Mukautetun teema tiedoston tulee olla JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "On erittäin suositeltavaa, että salaat lompakkosi pitääksesi NXSsi turvassa.",
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Pidä automaattiset päivitykset Päällä",
   "Keep policy on": "Pidä käytäntö päällä",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Lompakon ajantasalla pitäminen on tärkeää turvallisuutesi vuoksi ja varmistaa parhaan mahdollisen käyttäjäkokemuksen.",
@@ -257,6 +258,7 @@
   "My Addresses": "Omat osoitteeni",
   "My Nexus address": "Minun Nexus osoite",
   "My Nexus address for %{name}": "Nexus osoitteeni nimelle %{name}",
+  "My address for %{name}": null,
   "NXS Amount": "NXS määrä",
   "NXS addresses": "NXS osoitteet",
   "NXS moved successfully": "NXS siirretty onnistuneesti",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Tämä osoite on rekisteröity lompakkoon.",
   "This is not one of your addresses.": "Tämä ei ole yksi osoitteistasi.",
   "This is one of your addresses.": "Tämä on yksi osoitteistasi.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "Tämä on oletusosoitteesi",
   "This module is developed by Nexus": "Tämän moduulin on kehittänyt Nexus",
   "This repository does not exist or is private": "Tätä tietolähdettä ei ole tai se on yksityinen",
@@ -461,6 +464,7 @@
   "Wallet password": "Lompakon salasana",
   "Wallet will be automatically refreshed for the change to take effect": "Lompakko automaattisesti päivitetään, jotta muutos tulee voimaan",
   "Warning": "Varoitus",
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Kyllä",
   "Yes, abort": "Kyllä, lopeta",
   "Yes, let's bootstrap it": "Kyllä, esiladataan se",
