--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -204,6 +204,7 @@
   "Invalid email": "E-mail invalide",
   "Invalid file format! Custom theme file must be in JSON": "Format fichier invalide! Le thème personnalisé doit être au format JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "Il est fortement recommandé de chiffrer votre portefeuille pour garder votre NXS en sécurité.",
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Maintenir activée la mise à jour automatique",
   "Keep policy on": "Maintenir la politique",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "La mise à jour de votre portefeuille est importante pour votre sécurité et vous garantira la meilleure expérience utilisateur possible.",
@@ -257,6 +258,7 @@
   "My Addresses": "Mes adresses",
   "My Nexus address": "Mon adresse Nexus",
   "My Nexus address for %{name}": "Mon adresse Nexus pour %{name}",
+  "My address for %{name}": null,
   "NXS Amount": "Montant NXS",
   "NXS addresses": "Adresses NXS",
   "NXS moved successfully": "NXS transféré avec succès",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Ceci est une une adresse enregistrée pour ce portefeuille.",
   "This is not one of your addresses.": "Ceci n'est pas l'une de vos adresses.",
   "This is one of your addresses.": "Ceci est l'une de vos adresses.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "Ceci est votre adresse par défaut",
   "This module is developed by Nexus": "Ce module est développé par Nexus",
   "This repository does not exist or is private": "Ce répertoire n'existe pas ou est privé",
@@ -461,6 +464,7 @@
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": "Le portefeuille sera automatiquement actualisé pour que le changement prenne effet",
   "Warning": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Oui",
   "Yes, abort": "Oui, abandonner",
   "Yes, let's bootstrap it": "Oui, l'amorcer",
