--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -204,6 +204,7 @@
   "Invalid email": "Érvénytelen e-mail",
   "Invalid file format! Custom theme file must be in JSON": "Érvénytelen fájlformátum! Az egyéni témafájlnak JSON-ben kell lennie",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "Nagyon ajánlott, hogy titkosítsa a pénztárcáját az NXS biztonságának megőrzése érdekében.",
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Tartsa az automatikus frissítést bekapcsolva",
   "Keep policy on": "Tartsa az irányelvet bekapcsolva",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "A pénztárca naprakészen tartása fontos az Ön biztonsága szempontjából, és biztosítja a lehető legjobb felhasználói élmény elérését.",
@@ -257,6 +258,7 @@
   "My Addresses": "Címeim",
   "My Nexus address": "Nexus címeim",
   "My Nexus address for %{name}": "Nexus címem %{name}-nek",
+  "My address for %{name}": null,
   "NXS Amount": "NXS Összeg",
   "NXS addresses": "NXS címek",
   "NXS moved successfully": "A NXS áthelyezése sikerült",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Ez a cím erre a pénztárcára van regisztrálva.",
   "This is not one of your addresses.": "Ez nem az Ön címe.",
   "This is one of your addresses.": "Ez az Ön címe.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "Ez az Ön Alapértelmezett Címe",
   "This module is developed by Nexus": "Ezt a modult Nexus fejlesztette ki",
   "This repository does not exist or is private": "Ez az adattár nem létezik, vagy privát",
@@ -461,6 +464,7 @@
   "Wallet password": "Pénztárca jelszava",
   "Wallet will be automatically refreshed for the change to take effect": "A pénztárca automatikusan frissül, hogy a változás hatályba lépjen",
   "Warning": "Figyelem",
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Igen",
   "Yes, abort": "Igen, megszakítás",
   "Yes, let's bootstrap it": "Igen, töltsük be",
