--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -204,6 +204,7 @@
   "Invalid email": "Błędny email",
   "Invalid file format! Custom theme file must be in JSON": "Nieprawidłowy format pliku! Niestandardowy plik musi byc w JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Zostaw włączoną autoaktualizacje",
   "Keep policy on": "Pozostaw politykę włączoną",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Aktualizowanie Twojego portfela jest ważne ze względów bezpieczeństwa oraz zapewni Ci komfort użytkownika.",
@@ -257,6 +258,7 @@
   "My Addresses": "Mój Adres",
   "My Nexus address": "Mój adres Nexusa",
   "My Nexus address for %{name}": "Mój adres Nexusa dla %{name}",
+  "My address for %{name}": null,
   "NXS Amount": "Kwota NXS",
   "NXS addresses": "Adresy NXS",
   "NXS moved successfully": "SRODKI zostały wysłane",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Ten adres należy do tego portfela.",
   "This is not one of your addresses.": "To nie jest jeden z twoich adresów.",
   "This is one of your addresses.": "To jest jeden z twoich adresów.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "To jest Twój domyślny adres",
   "This module is developed by Nexus": "Ten moduł został stworzony przez Nexus",
   "This repository does not exist or is private": "To repozytorium nie istnieje lub jest prywatne",
@@ -461,6 +464,7 @@
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Tak",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
