--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -204,6 +204,7 @@
   "Invalid email": "Email inválido",
   "Invalid file format! Custom theme file must be in JSON": "Formato de arquivo inválido! Arquivo de tema personalizado deve estar em JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "Manter a atualização automática ativada",
   "Keep policy on": null,
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Manter sua carteira atualizada é importante para sua segurança e garantirá que você obtenha a melhor experiência possível para o usuário.",
@@ -257,6 +258,7 @@
   "My Addresses": "Meus endereços",
   "My Nexus address": "Meu endereço do Nexus",
   "My Nexus address for %{name}": "Meu endereço das Nexus para %{name}",
+  "My address for %{name}": null,
   "NXS Amount": "Quantidade NXS",
   "NXS addresses": "Endereços NXS",
   "NXS moved successfully": "NXS movidas com sucesso",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "Este é um endereço registrado nesta carteira.",
   "This is not one of your addresses.": "Este não é um dos seus endereços.",
   "This is one of your addresses.": "Este é um dos seus endereços.",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": null,
   "This module is developed by Nexus": null,
   "This repository does not exist or is private": null,
@@ -461,6 +464,7 @@
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Sim",
   "Yes, abort": null,
   "Yes, let's bootstrap it": null,
