--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -204,6 +204,7 @@
   "Invalid email": "无效的电子邮件",
   "Invalid file format! Custom theme file must be in JSON": "无效的文件格式！自定义主题文件必须在 JSON 中",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "非常建议您加密你的钱包，以保持你的 NXS 安全。",
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
   "Keep auto update On": "保持自动更新开启",
   "Keep policy on": "保持政策开启",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "更新你的钱包对于你的安全非常重要，并确保您获得尽可能最好的用户体验。",
@@ -257,6 +258,7 @@
   "My Addresses": "我的地址",
   "My Nexus address": "我的Nexus地址",
   "My Nexus address for %{name}": "我的 %{name} 的Nexus 地址",
+  "My address for %{name}": null,
   "NXS Amount": "NXS 金额",
   "NXS addresses": "NXS 地址",
   "NXS moved successfully": "NXS 成功移动",
@@ -405,6 +407,7 @@
   "This is an address registered to this wallet.": "这是一个已注册到该钱包的地址。",
   "This is not one of your addresses.": "这不是您的地址之一。",
   "This is one of your addresses.": "这是你的地址之一。",
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
   "This is your Default Address": "这是您的默认地址",
   "This module is developed by Nexus": "此模块由Nexus开发",
   "This repository does not exist or is private": "此存储库不存在或是私有的",
@@ -461,6 +464,7 @@
   "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": "钱包将自动刷新，以便更改生效",
   "Warning": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "是",
   "Yes, abort": "是，中止",
   "Yes, let's bootstrap it": "是的，让我们来引导吧",
