--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -286,7 +286,7 @@
   "No, let it continue": "لا، دعها تستمر",
   "No, let it sync": "لا، دعها تزامن",
   "Not available": "غير متاح",
-  "Not enough disk space! Minimum %{size}GB of free space is required.": "مساحة غير كافيه في القرص! الحد الأدنى للمساحة الخالية %{size}GB.",
+  "Not enough disk space! Minimum 15GB of free space is required.": null,
   "Not logged in": "لم يتم دخولك",
   "Not provided": "غير مزود",
   "Notes": "ملاحظات",
@@ -336,6 +336,8 @@
   "Recipient address": "عنوان المستلم",
   "Refresh": "تحديث",
   "Refreshing market data...": "يتم تحديث البيانات السوقية...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "أزل العنوان",
   "Remove recipient": "إزالة المستلم",
   "Render globe": "عرض الكرة الأرضية",
@@ -348,6 +350,7 @@
   "Reset": "إعادة تعيين",
   "Restart Core": "إعادة تشغيل النواة",
   "Restart Core?": "إعادة تشغيل النواة؟",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": "يتم إعادة تشغيل النواة...",
   "Restarting Nexus Core...": "يتم إعادة تشغيل النواة Nexus...",
   "Sample Address": "عنوان نموذج",
@@ -438,6 +441,7 @@
   "Turn policy off": "تعطيل السياسة",
   "Twinkling stars": "نجوم متلألئة",
   "Unknown": "مجهول",
+  "Unknown error": null,
   "Unknown login status": "حالة تسجل الدخول غير معروفة",
   "Unsupported file type": "نوع ملف غير مدعوم",
   "Update available! Downloading...": "التحديث متاح! يتم التحميل...",
