--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -336,6 +336,8 @@
   "Recipient address": "Empfängeradresse",
   "Refresh": "Marktdaten aktualisieren",
   "Refreshing market data...": "Marktdaten werden aktualisiert...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Adresse entfernen",
   "Remove recipient": "Empfänger entfernen",
   "Render globe": "Globus rendern",
@@ -348,6 +350,7 @@
   "Reset": "Zurücksetzen",
   "Restart Core": "Starten Sie den Core neu",
   "Restart Core?": null,
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Starte Daemon neu...",
   "Sample Address": null,
@@ -438,6 +441,7 @@
   "Turn policy off": "Richtlinien aus",
   "Twinkling stars": "Sternenhimmel",
   "Unknown": "Unbekannt",
+  "Unknown error": null,
   "Unknown login status": "Unbekannter Login-Status",
   "Unsupported file type": "Nicht unterstützter Dateityp",
   "Update available! Downloading...": "Update verfügbar! Herunterladen...",
