--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -336,6 +336,8 @@
   "Recipient address": "Recipient address",
   "Refresh": "Refresh",
   "Refreshing market data...": "Refreshing market data...",
+  "Reload": "Reload",
+  "Reload transaction history": "Reload transaction history",
   "Remove address": "Remove address",
   "Remove recipient": "Remove recipient",
   "Render globe": "Render globe",
@@ -348,6 +350,7 @@
   "Reset": "Reset",
   "Restart Core": "Restart Core",
   "Restart Core?": "Restart Core?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history",
   "Restarting Core...": "Restarting Core...",
   "Restarting Nexus Core...": "Restarting Nexus Core...",
   "Sample Address": "Sample Address",
@@ -438,6 +441,7 @@
   "Turn policy off": "Turn policy off",
   "Twinkling stars": "Twinkling stars",
   "Unknown": "Unknown",
+  "Unknown error": "Unknown error",
   "Unknown login status": "Unknown login status",
   "Unsupported file type": "Unsupported file type",
   "Update available! Downloading...": "Update available! Downloading...",
