--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -336,6 +336,8 @@
   "Recipient address": "Dirección del destinatario",
   "Refresh": "Actualizar",
   "Refreshing market data...": "Actualización de datos del mercado...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Eliminar dirección",
   "Remove recipient": "Eliminar destinatario",
   "Render globe": null,
@@ -348,6 +350,7 @@
   "Reset": null,
   "Restart Core": "Reiniciar el núcleo",
   "Restart Core?": "¿Reiniciar el núcleo?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Reiniciando el demonio...",
   "Sample Address": null,
@@ -438,6 +441,7 @@
   "Turn policy off": null,
   "Twinkling stars": null,
   "Unknown": "Desconocido",
+  "Unknown error": null,
   "Unknown login status": null,
   "Unsupported file type": null,
   "Update available! Downloading...": null,
