--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -336,6 +336,8 @@
   "Recipient address": "Vastaanottajan osoite",
   "Refresh": "Päivitä",
   "Refreshing market data...": "Päivitetään markkinoiden tietoja...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Poista osoite",
   "Remove recipient": "Poista vastaanottaja",
   "Render globe": "Renderöi maapallo",
@@ -348,6 +350,7 @@
   "Reset": "Nollaa",
   "Restart Core": "Uudelleenkäynnistä Ydin",
   "Restart Core?": "Uudelleenkäynnistä Ydin?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": "Uudelleenkäynnistetään Ydintä...",
   "Restarting Nexus Core...": "Uudelleenkäynnistetään Nexus Ydintä...",
   "Sample Address": "Malli Osoite",
@@ -438,6 +441,7 @@
   "Turn policy off": "Käytäntö pois",
   "Twinkling stars": "Tuikkivat tähdet",
   "Unknown": "Tuntematon",
+  "Unknown error": null,
   "Unknown login status": "Tuntematon kirjautuminen",
   "Unsupported file type": "Tiedostotyyppiä ei tueta",
   "Update available! Downloading...": "Päivitys saatavilla! Ladataan...",
