--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -336,6 +336,8 @@
   "Recipient address": "Adresse du destinataire",
   "Refresh": "Rafraîchir les données du marché",
   "Refreshing market data...": "Rafraîchissement des données du marché...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Enlever adresse",
   "Remove recipient": "Retirer le destinataire",
   "Render globe": "Afficher le globe",
@@ -348,6 +350,7 @@
   "Reset": "Réinitialiser",
   "Restart Core": "Redémarrer le noyau",
   "Restart Core?": "Redémarrer le noyau ?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": "Redémarrage du noyau...",
   "Restarting Nexus Core...": "Redémarrage du daemon...",
   "Sample Address": "Exemple d'adresse",
@@ -438,6 +441,7 @@
   "Turn policy off": "Désactiver la politique",
   "Twinkling stars": "Étoiles Scintillantes",
   "Unknown": "Inconnu",
+  "Unknown error": null,
   "Unknown login status": "Statut de connexion inconnu",
   "Unsupported file type": "Type de fichier non supporté",
   "Update available! Downloading...": "Mise à jour disponible ! Téléchargement...",
