--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -336,6 +336,8 @@
   "Recipient address": "Címzett címe",
   "Refresh": "Frissítés",
   "Refreshing market data...": "Piaci adatok frissítése...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Cím törlése",
   "Remove recipient": "Címzett eltávolítása",
   "Render globe": "Földgolyó megjelenítése",
@@ -348,6 +350,7 @@
   "Reset": "Alapállapot",
   "Restart Core": "Core újraindítása",
   "Restart Core?": "Core-t újraindítani?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": "Core újraindítása...",
   "Restarting Nexus Core...": "Nexus Core újraindítása...",
   "Sample Address": "Minta Cím",
@@ -438,6 +441,7 @@
   "Turn policy off": "Kikapcsolni az irányelvet",
   "Twinkling stars": "Csillogó csillagok",
   "Unknown": "Ismeretlen",
+  "Unknown error": null,
   "Unknown login status": "Ismeretlen bejelentkezési állapot",
   "Unsupported file type": "Nem támogatott fájltípus",
   "Update available! Downloading...": "Frissítés elérhető! Letöltés...",
