--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -336,6 +336,8 @@
   "Recipient address": null,
   "Refresh": "マーケットデータをリフレッシュする",
   "Refreshing market data...": "Refreshing Market Data",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": null,
   "Remove recipient": null,
   "Render globe": "レンダリンググローブ",
@@ -348,6 +350,7 @@
   "Reset": null,
   "Restart Core": "再起動コア",
   "Restart Core?": null,
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Sample Address": null,
@@ -438,6 +441,7 @@
   "Turn policy off": null,
   "Twinkling stars": null,
   "Unknown": null,
+  "Unknown error": null,
   "Unknown login status": null,
   "Unsupported file type": null,
   "Update available! Downloading...": null,
