--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -336,6 +336,8 @@
   "Recipient address": "Adres odbiorcy",
   "Refresh": "Odswiez",
   "Refreshing market data...": "Odswiezanie danych rynkowych...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Usuń adres",
   "Remove recipient": "Usuń odbiorce",
   "Render globe": null,
@@ -348,6 +350,7 @@
   "Reset": "Ustaw",
   "Restart Core": "Zrestartuj core",
   "Restart Core?": "Ta aktywność wymaga restartu?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Restartowanie daemona...",
   "Sample Address": "Przykładowy adres",
@@ -438,6 +441,7 @@
   "Turn policy off": null,
   "Twinkling stars": "Migające gwiazdy",
   "Unknown": "Nieznane",
+  "Unknown error": null,
   "Unknown login status": "Nieznany status logowania",
   "Unsupported file type": "Nieobsługiwany typ pliku",
   "Update available! Downloading...": "Aktualizacja jest dostępna! Pobieram...",
