--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -336,6 +336,8 @@
   "Recipient address": "Endereço do destinatário",
   "Refresh": "Atualizar",
   "Refreshing market data...": "Atualizando dados de mercado...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "Remover endereço",
   "Remove recipient": "Remover destinatário",
   "Render globe": "Renderizar globo",
@@ -348,6 +350,7 @@
   "Reset": "Reiniciar",
   "Restart Core": "Reiniciar núcleo",
   "Restart Core?": "Reiniciar o núcleo?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": "A reiniciar o daemon...",
   "Sample Address": null,
@@ -438,6 +441,7 @@
   "Turn policy off": null,
   "Twinkling stars": null,
   "Unknown": "Desconhecido",
+  "Unknown error": null,
   "Unknown login status": null,
   "Unsupported file type": null,
   "Update available! Downloading...": null,
