--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -336,6 +336,8 @@
   "Recipient address": "收件人地址",
   "Refresh": "更新",
   "Refreshing market data...": "正在刷新市场数据...",
+  "Reload": null,
+  "Reload transaction history": null,
   "Remove address": "删除地址",
   "Remove recipient": "移除收件人",
   "Render globe": "渲染地球",
@@ -348,6 +350,7 @@
   "Reset": "重置",
   "Restart Core": "重启核心",
   "Restart Core?": "重启核心?",
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
   "Restarting Core...": "重新启动核心...",
   "Restarting Nexus Core...": "重新启动 Nexus 核心...",
   "Sample Address": "示例地址",
@@ -438,6 +441,7 @@
   "Turn policy off": "关闭策略",
   "Twinkling stars": "闪烁的星星",
   "Unknown": "未知",
+  "Unknown error": null,
   "Unknown login status": "未知登录状态",
   "Unsupported file type": "不支持的文件类型",
   "Update available! Downloading...": "更新可用！下载中...",
